Firefox Major Bug Fix (Fixed dual scrollbars on portfolioItem, ability to scroll full length of portfolio and smaller bug fixes)

--- a/css/main.css
+++ b/css/main.css
@@ -614,8 +614,8 @@ html, body {
       display: -ms-flexbox;
       display: -webkit-flex;
       display: flex;
-      -ms-flex-direction: row;
-      flex-direction: row;
+      -ms-flex-direction: column;
+      flex-direction: column;
       -webkit-flex-direction: column;
       -ms-flex-align: center;
       align-items: center;
@@ -911,8 +911,7 @@ html, body {
         -ms-flex-align: center;
             align-items: center;
     text-align: center;
-    padding: 0;
-    background-size: 130% auto !important; }
+    padding: 0; }
   #about .stages-wrapper .overlay {
     z-index: 100;
     display: none;
@@ -946,16 +945,37 @@ html, body {
       margin-top: 35px; }
   #about .stages-wrapper .stage-content1 {
     background: url(../assets/img/stage1.jpg) center no-repeat;
-    height: inherit; }
+    height: inherit;
+    background-size: 130% auto; }
+@media(max-width: 1018px) and (min-width: 992px) {
+  #about .stages-wrapper .stage-content1 {
+    background-size: 140% auto; } }
+@media(max-width: 991px) {
+  #about .stages-wrapper .stage-content1 {
+    background-size: cover; } }
   #about .stages-wrapper .stage-content2 {
     background: url(../assets/img/stage2.jpg) center no-repeat;
-    height: inherit; }
+    height: inherit;
+    background-size: 130% auto; }
+@media(max-width: 1018px) and (min-width: 992px) {
+  #about .stages-wrapper .stage-content2 {
+    background-size: 140% auto; } }
+@media(max-width: 991px) {
+  #about .stages-wrapper .stage-content2 {
+    background-size: cover; } }
   #about .stages-wrapper .stage-content3 {
     background: url(../assets/img/stage3.jpg) center no-repeat;
-    height: inherit; }
+    height: inherit;
+    background-size: 130% auto; }
+@media(max-width: 1018px) and (min-width: 992px) {
+  #about .stages-wrapper .stage-content3 {
+    background-size: 140% auto; } }
+@media(max-width: 991px) {
+  #about .stages-wrapper .stage-content3 {
+    background-size: cover; } }
   #about .stages-wrapper .stage-content1:hover, #about .stages-wrapper .stage-content2:hover, #about .stages-wrapper .stage-content3:hover {
-    position: relative; }
-
+    position: relative;
+    background-size: 130% auto; }
 @media(max-width: 1690px) {
   #about .stages-wrapper .stage-1, #about .stages-wrapper .stage-2, #about .stages-wrapper .stage-3 {
     height: 500px; }
@@ -991,9 +1011,6 @@ html, body {
     @media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
       #about .stages-wrapper .stage-1, #about .stages-wrapper .stage-2, #about .stages-wrapper .stage-3 {
         height: 520px; } } }
-@media(max-width: 991px) {
-  .stage-content {
-    background-size: cover !important; } }
 #about {
   background-color: white; }
   #about #menu-about {
@@ -1148,6 +1165,7 @@ html, body {
   z-index: 1001;
   position: fixed;
   top: 0;
+  right: 0;
   bottom: 0;
   right: 0;
   left: 0;
@@ -1173,7 +1191,11 @@ html, body {
       justify-content: center;
   -webkit-justify-content: center; }
   .portfolioItem .portfolioWrapper {
-    margin-bottom: 70px; }
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    overflow-x: hidden; }
 @media(max-width:767px) {
   .portfolioItem .portfolioWrapper {
     width: 90%;
@@ -2022,9 +2044,9 @@ html, body {
       -webkit-justify-content: center;
       background: #F4F4F4;
       padding-left: 0;
-      height: inherit; }
+      height: inherit;
+      padding: 10%; }
       #portfolioItem2 .portfolioWrapper .portfolioContainer2 .info .content p {
-        padding: 10%;
         font-size: 14px;
         font-weight: 400;
         color: #7A7979;
@@ -2131,19 +2153,24 @@ html, body {
       opacity: 0.6; }
       #portfolioItem2 .portfolioWrapper .portfolioContainer2 .logoInfo .image .imageWrapper {
         position: absolute;
-        left: -75%; }
+        left: -75%;
+        bottom: 20px; }
         #portfolioItem2 .portfolioWrapper .portfolioContainer2 .logoInfo .image .imageWrapper img {
           width: 1200px; }
   @media(max-width: 745px) {
     #portfolioItem2 .portfolioWrapper .portfolioContainer2 .logoInfo .image {
       bottom: 60%; }
-      #portfolioItem2 .portfolioWrapper .portfolioContainer2 .logoInfo .image .imageWrapper img {
-        width: 1000px; } }
+      #portfolioItem2 .portfolioWrapper .portfolioContainer2 .logoInfo .image .imageWrapper {
+        bottom: 35%; }
+        #portfolioItem2 .portfolioWrapper .portfolioContainer2 .logoInfo .image .imageWrapper img {
+          width: 1000px; } }
   @media(max-width: 650px) {
     #portfolioItem2 .portfolioWrapper .portfolioContainer2 .logoInfo .image {
       bottom: 48%; }
-      #portfolioItem2 .portfolioWrapper .portfolioContainer2 .logoInfo .image .imageWrapper img {
-        width: 800px; } }
+      #portfolioItem2 .portfolioWrapper .portfolioContainer2 .logoInfo .image .imageWrapper {
+        bottom: 55%; }
+        #portfolioItem2 .portfolioWrapper .portfolioContainer2 .logoInfo .image .imageWrapper img {
+          width: 800px; } }
   @media(max-width: 400px) {
     #portfolioItem2 .portfolioWrapper .portfolioContainer2 .logoInfo .image {
       bottom: 30%; }
@@ -2393,18 +2420,19 @@ html, body {
         justify-content: center;
     -webkit-justify-content: center; }
     #portfolioItem4 .portfolioWrapper .portfolioContainer4 .website img {
-      padding: 10%;
-      height: 100%;
-      width: 100vw; }
+      padding: 50px 10%;
+      height: auto;
+      width: 70%;
+      padding-top: 50px;
+      padding-bottom: 50px; }
 @media(min-width:1170px) {
   #portfolioItem4 .portfolioWrapper .portfolioContainer4 .website img {
     max-width: 1500px; } }
-@media(max-width: 750px) {
+@media(max-width:991px) {
   #portfolioItem4 .portfolioWrapper .portfolioContainer4 .website img {
+    height: 100%;
+    width: 100%;
     padding: 0; } }
-@media(max-width:500px) {
-  #portfolioItem4 .portfolioWrapper .portfolioContainer4 .website {
-    margin-top: 10px; } }
 @media(max-width: 1320px) {
   #portfolioItem4 .portfolioWrapper .portfolioContainer4 .content2 .image1 img, #portfolioItem4 .portfolioWrapper .portfolioContainer4 .content2 .image2 img {
     width: 400px;
