--- a/sass/components/_calltoaction.sass
+++ b/sass/components/_calltoaction.sass
@@ -350,8 +350,8 @@
 			display: -ms-flexbox
 			display: -webkit-flex
 			display: flex
-			-ms-flex-direction: row
-			flex-direction: row
+			-ms-flex-direction: column
+			flex-direction: column
 			-webkit-flex-direction: column
 			-ms-flex-align: center
 			align-items: center
