--- a/sass/modules/_portfolio.sass
+++ b/sass/modules/_portfolio.sass
@@ -65,6 +65,7 @@
 	z-index: 1001
 	position: fixed
 	top: 0
+	right: 0
 	bottom: 0
 	right: 0
 	left: 0
@@ -91,7 +92,11 @@
 	-webkit-justify-content: center
 
 	.portfolioWrapper
-		margin-bottom: 70px
+		position: absolute
+		top: 0
+		left: 0
+		right: 0
+		overflow-x: hidden
 		@media(max-width:767px)
 			width: 90%
 			margin-bottom: 30px!important
