--- a/sass/modules/portfolioItems/_portfolioItem2.sass
+++ b/sass/modules/portfolioItems/_portfolioItem2.sass
@@ -50,9 +50,9 @@
 					background: $light_gray
 					padding-left: 0
 					height: inherit
+					padding: 10%
 
 					p
-						padding: 10%
 						font:
 							size: 14px
 							weight: 400
@@ -163,17 +163,20 @@
 						.imageWrapper
 							position: absolute
 							left: -75%
+							bottom: 20px
 							img
 								width: 1200px
 
 						@media(max-width: 745px)
 							bottom: 60%
 							.imageWrapper
+								bottom: 35%
 								img
 									width: 1000px
 						@media(max-width: 650px)
 							bottom: 48%
 							.imageWrapper
+								bottom: 55%
 								img
 									width: 800px
 						@media(max-width: 400px)
