--- a/sass/modules/portfolioItems/_portfolioitem4.sass
+++ b/sass/modules/portfolioItems/_portfolioitem4.sass
@@ -152,15 +152,19 @@
 				-webkit-justify-content: center
 
 				img
-					padding: 10%
-					height: 100%
-					width: 100vw
+
+					padding: 50px 10%
+					height: auto
+					width: 70%
+					padding-top: 50px
+					padding-bottom: 50px
+
 					@media(min-width:1170px)
 						max-width: 1500px
-					@media(max-width: 750px)
+					@media(max-width:991px)
+						height: 100%
+						width: 100%
 						padding: 0
-				@media(max-width:500px)
-					margin-top: 10px
 
 
 			@media(max-width: 1320px)
